--- a/project/Binf/Binf.csproj
+++ b/project/Binf/Binf.csproj
@@ -65,6 +65,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="container.html" />
+    <Content Include="styles\styles-container.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
