--- a/project/Binf/Binf.csproj
+++ b/project/Binf/Binf.csproj
@@ -66,9 +66,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="container.html" />
+    <Content Include="LogIn.html" />
     <Content Include="MainPage.html" />
+    <Content Include="registration.html" />
     <Content Include="styles\mainPageStyleSheet.css" />
     <Content Include="styles\styles-container.css" />
+    <Content Include="styles\styles-registration.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
