--- a/project/Binf/Binf.csproj
+++ b/project/Binf/Binf.csproj
@@ -65,10 +65,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bottom-menu.html" />
     <Content Include="container.html" />
     <Content Include="LogIn.html" />
     <Content Include="MainPage.html" />
     <Content Include="registration.html" />
+    <Content Include="styles\styles-login.css" />
     <Content Include="styles\styles-main.css" />
     <Content Include="styles\styles-container.css" />
     <Content Include="styles\styles-registration.css" />
