--- a/project/Binf/Binf.csproj
+++ b/project/Binf/Binf.csproj
@@ -66,7 +66,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="container.html" />
+    <Content Include="images\messages.png" />
+    <Content Include="images\off.png" />
+    <Content Include="images\on.png" />
     <Content Include="images\placeholder.png" />
+    <Content Include="images\search.png" />
+    <Content Include="images\settings.png" />
+    <Content Include="images\status.png" />
     <Content Include="LogIn.html" />
     <Content Include="main-content.html" />
     <Content Include="MainPage.html" />
