--- a/project/Binf/Binf.csproj
+++ b/project/Binf/Binf.csproj
@@ -65,6 +65,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Chat.html" />
     <Content Include="container.html" />
     <Content Include="images\messages.png" />
     <Content Include="images\off.png" />
